--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -59,7 +59,6 @@
     "react-modal": "3.16.1",
     "react-paginate": "8.2.0",
     "react-redux": "8.1.3",
-    "react-redux-toastr": "7.6.13",
     "react-router-dom": "6.22.0",
     "react-select": "5.8.0",
     "react-step-wizard": "5.3.11",
@@ -67,9 +66,9 @@
     "recharts": "2.12.0",
     "redoc": "2.1.3",
     "redux": "4.2.1",
-    "redux-logger": "3.0.6",
     "redux-thunk": "2.4.2",
     "set-value": "4.1.0",
+    "sonner": "^1.4.0",
     "showdown": "2.1.0",
     "swagger-editor": "4.12.1",
     "swagger-ui-dist": "5.11.6",
