--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -39,6 +39,7 @@ hyper-tls = "0.5.0"
 base64 = "0.21.5"
 futures-channel = "0.3.29"
 configparser = "3.0.4"
+async-recursion = "1.0.5"
 
 [dependencies.uuid]
 version = "1.7.0"
