--- a/daikoku/javascript/package.json
+++ b/daikoku/javascript/package.json
@@ -65,8 +65,8 @@
     "recharts": "2.12.0",
     "redoc": "2.1.3",
     "set-value": "4.1.0",
-    "sonner": "^1.4.0",
     "showdown": "2.1.0",
+    "sonner": "^1.4.0",
     "swagger-editor": "4.12.1",
     "swagger-ui-dist": "5.11.6",
     "xstate": "^4.38.3"
@@ -78,9 +78,11 @@
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.23.9",
     "@babel/preset-react": "7.23.3",
+    "@playwright/test": "^1.42.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/jquery": "^3.5.29",
     "@types/js-md5": "^0.7.2",
+    "@types/node": "^20.11.23",
     "@types/react": "^18.2.55",
     "@types/react-color": "^3.0.11",
     "@types/react-dom": "^18.2.19",
