--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -40,6 +40,8 @@ base64 = "0.21.5"
 futures-channel = "0.3.29"
 configparser = "3.0.4"
 async-recursion = "1.0.5"
+serde_yaml = "0.9.32"
+void = "1.0.2"
 
 [dependencies.uuid]
 version = "1.7.0"
