--- a/daikoku/conf/base.conf
+++ b/daikoku/conf/base.conf
@@ -17,7 +17,7 @@ daikoku {
   anonymous-reporting {
       enabled = true
       enabled = ${?DAIKOKU_ANONYMOUS_REPORTING_ENABLED}
-      url = "http://localhost:9000/daikoku/ingest"
+      url = "https://reporting.otoroshi.io/daikoku/ingest"
       timeout = 60000
       timeout = ${?DAIKOKU_ANONYMOUS_REPORTING_TIMEOUT}
   }
