--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -43,6 +43,8 @@ async-recursion = "1.0.5"
 serde_yaml = "0.9.32"
 void = "1.0.2"
 walkdir = "2.5.0"
+webbrowser = "0.8.13"
+html-escape = "0.2.13"
 
 [dependencies.uuid]
 version = "1.7.0"
